<resources>
    <string name="app_name">SM1-quiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="header">Quiz Gracjana Ulianowskiego</string>

    <string name="button_true">Prawda</string>
    <string name="button_false">Fałsz</string>
    <string name="button_next">Następne</string>
    <string name="button_hint">Podpowiedź</string>
    <string name="button_show_hint">Pokaż odpowiedź</string>

    <string name="q_platki">Najpierw mleko potem płatki</string> <!-- tak -->
    <string name="q_wojna">Wojna Stuletnia trwała 100lat</string> <!-- 116 -->
    <string name="q_pierogi">Pierogi ruskie to potrawa pochodzenia rosyjskiego</string> <!-- Białoruś -->
    <string name="q_wyspy">Wyspy Kanaryjskie swoją nazwe zawdzięczają psom</string> <!-- tak -->
    <string name="q_troja">W koniu trojańskim ukryci byli persowie</string> <!-- Grecy -->

    <string name="correct_answer">Dobrze!</string>
    <string name="incorrect_answer">Źle</string>
    <string name="answer_was_shown">Odpowiedź została wyświetlona</string>

    <string name="help_check">Czy na pewno chcesz zobaczyć odpowiedź?</string>
</resources>